# kelp-rs

./: .gitignore  Cargo.toml
kelp-core/: Cargo.toml
kelp-core/src/: block.rs  builtin_data_type.rs  compile_context.rs  data.rs  data_type.rs  entity_selector.rs  expression.rs  field_access_type.rs  item.rs  lib.rs  nbt_path.rs  operator.rs  parameter_types_iter.rs  path.rs  pattern.rs  pattern_type.rs  place.rs  player_score.rs  runtime_storage.rs  runtime_storage_type.rs  score_comparison.rs  semantic_analysis_context.rs  span.rs  statement.rs  trait_ext.rs  visibility.rs
kelp-core/src/ast_allocator/: high.rs  low.rs
kelp-core/src/command/: data.rs  execute.rs  function.rs  item_source.rs  mod.rs  return.rs  scoreboard.rs
kelp-core/src/data_type/: high.rs  mod.rs
kelp-core/src/datapack/: mcfunction.rs  mod.rs  namespace.rs
kelp-core/src/expression/: constant.rs  literal.rs  mod.rs  supports_variable_type_scope.rs  utils.rs
kelp-core/src/high/: block.rs  coordinate.rs  data.rs  data_type.rs  expression.rs  item.rs  item_source.rs  mc_item.rs  mod.rs  nbt_path.rs  pattern.rs  player_score.rs  program.rs  score_comparison.rs  snbt_string.rs  statement.rs  supports_expression_sigil.rs  supports_variable_type_scope.rs  use_tree.rs
kelp-core/src/low/: block.rs  coordinate.rs  data.rs  data_type.rs  expression.rs  item.rs  item_source.rs  mc_item.rs  mod.rs  nbt_path.rs  pattern.rs  place.rs  player_score.rs  program.rs  score_comparison.rs  statement.rs  supports_expression_sigil.rs  text_component.rs
kelp-core/src/middle/: block.rs  coordinate.rs  data.rs  data_type.rs  data_type_declaration.rs  item.rs  item_source.rs  mc_item.rs  mod.rs  nbt_path.rs  pattern.rs  player_score.rs  score_comparison.rs  statement.rs
kelp-core/src/parsed/: arena.rs  block.rs  coordinate.rs  data.rs  data_type.rs  item.rs  item_source.rs  mc_item.rs  mod.rs  nbt_path.rs  pattern.rs  player_score.rs  program.rs  score_comparison.rs  snbt_string.rs  statement.rs  supports_expression_sigil.rs  typed_path.rs  use_tree.rs
kelp-core/src/path/: generic.rs  mod.rs  regular.rs
kelp-core/src/semantic/: block.rs  coordinate.rs  data.rs  data_type.rs  item.rs  item_source.rs  mc_item.rs  mod.rs  nbt_path.rs  path.rs  pattern.rs  player_score.rs  program.rs  score_comparison.rs  statement.rs  supports_expression_sigil.rs  typed_path.rs
kelp-core/src/typed/: arena.rs  block.rs  coordinate.rs  data.rs  data_type.rs  item.rs  item_source.rs  mc_item.rs  mod.rs  nbt_path.rs  pattern.rs  player_score.rs  program.rs  score_comparison.rs  statement.rs  supports_expression_sigil.rs
kelp-parser/: Cargo.toml  build.rs  kelp.ungram
kelp-parser/src/: column_position.rs  coordinate.rs  cst.rs  data_type.rs  dispatch.rs  entity_selector.rs  expression.rs  expression_sigil.rs  extension_traits.rs  lib.rs  lower_context.rs  parser.rs  path.rs  pattern.rs  player_score.rs  program.rs  range.rs  resource_location.rs  root.rs  semantic_token.rs  span.rs  statement.rs  struct.rs  syntax.rs  use_tree.rs
kelp-parser/src/command/: data.rs  difficulty.rs  enchant.rs  execute.rs  function.rs  mod.rs  return.rs  scoreboard.rs  summon.rs  tellraw.rs
kelp-parser/src/coordinates/: local.rs  mod.rs  world.rs
kelp-parser/src/cstlib/: error.rs  mod.rs  node.rs  token.rs
kelp-parser/src/data/: mod.rs
kelp-parser/src/data_type/: generics.rs  inferred.rs  mod.rs  named.rs  path.rs  reference.rs  typed_compound.rs
kelp-parser/src/entity_selector/: mod.rs
kelp-parser/src/enums/: mod.rs
kelp-parser/src/expression/: as_cast.rs  assignment.rs  binary.rs  block.rs  boolean.rs  character.rs  compound.rs  data.rs  field_access.rs  for.rs  if.rs  index.rs  list.rs  loop.rs  mod.rs  numeric.rs  parenthesized.rs  path.rs  score.rs  string.rs  struct.rs  to_cast.rs  tuple.rs  unary.rs  underscore.rs  unit.rs  variable.rs  while.rs
kelp-parser/src/item/: associated.rs  constant_declaration.rs  function_declaration.rs  mcfn_declaration.rs  minecraft_function_declaration.rs  mod.rs  module_declaration.rs  struct_declaration.rs  type_alias_declaration.rs  use.rs
kelp-parser/src/lower/: cst.rs  data_type.rs  mod.rs  (+5 more)
(+516 files in other folders)
