[workspace]
resolver = "3"
members = ["kelp-cli", "kelp-core", "kelp-lsp", "kelp-parser"]

[workspace.dependencies]
minecraft-command-types = { path = "../minecraft-command-types" }
minecraft-command-types_derive = { path = "../minecraft-command-types/minecraft-command-types_derive" }
nonempty = "0.12.0"
ordered-float = "5.1.0"
serde_json = "1.0.145"
tower-lsp = "0.20.0"
kelp-core = { path = "kelp-core" }
kelp-parser = { path = "kelp-parser" }
