[workspace]
resolver = "3"
members = ["kelp-cli", "kelp-core", "kelp-lsp", "kelp-parser"]

[workspace.dependencies]
minecraft-command-types = { path = "../minecraft-command-types" }
minecraft-command-types_procedural-macros = { path = "../minecraft-command-types/minecraft-command-types_procedural-macros" }
ordered-float = "5.3.0"
serde_json = "1.0.150"
kelp-core = { path = "kelp-core" }
kelp-parser = { path = "kelp-parser" }
