[package]
name = "kelp-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbrown = "0.17.1"
minecraft-command-types = { workspace = true }
minecraft-command-types_derive = { workspace = true }
ordered-float = { workspace = true }
serde_json = "1.0.149"
smallvec = "1.15.1"
strum = "0.28.0"
strum_macros = "0.28.0"
