[package]
name = "kelp-core"
version = "0.1.0"
edition = "2024"

[dependencies]
minecraft-command-types.workspace = true
minecraft-command-types_procedural-macros.workspace = true

hashbrown.workspace = true
ordered-float.workspace = true
serde_json.workspace = true
smallvec.workspace = true
strum.workspace = true
strum_macros.workspace = true
la-arena.workspace = true
