[package]
name = "kelp-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
kelp-core = { workspace = true }
ordered-float = { workspace = true }
minecraft-command-types = { workspace = true }
nonempty = { workspace = true }
serde_json = { workspace = true }
paste = "1.0.15"
phf = "0.13.1"
rowan = "0.16.1"

[build-dependencies]
prettyplease = "0.2.37"
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = "2.0.117"
ungrammar = "1.16.1"
