[package]
name = "kelp-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
kelp-core.workspace = true

minecraft-command-types.workspace = true
ordered-float.workspace = true
paste.workspace = true
phf.workspace = true
rowan.workspace = true
serde_json.workspace = true
thiserror.workspace = true
strum.workspace = true
strum_macros.workspace = true
la-arena.workspace = true

[build-dependencies]
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
ungrammar.workspace = true
